# workshop2-code-to-deploy

./: README.md  main.py  pyproject.toml  render.yaml  requirements-dev.txt  testes.py
.github/workflows/: main.yml
app/: data.py  main.py  schema.py
tests/: test_api.py
